--- a/front/package.json
+++ b/front/package.json
@@ -38,6 +38,7 @@
     "truffle-contract": "^3.0.6",
     "typescript": "~2.4.2",
     "web3": "^1.0.0-beta.26",
+    "web3-utils": "^1.0.0-beta.36",
     "webpack": "^3.12.0",
     "zone.js": "^0.8.14"
   },
